--- a/.gitignore
+++ b/.gitignore
@@ -49,17 +49,6 @@ coverage.xml
 *.mo
 *.pot
 
-# Django stuff:
-*.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
 # Sphinx documentation
 docs/_build/
 
@@ -72,18 +61,15 @@ target/
 # pyenv
 .python-version
 
-# celery beat schedule file
-celerybeat-schedule
-
 # dotenv
 .env
 
 # virtualenv
-venv/
-ENV/
+.squarespace-*
+activate*
 
-# Spyder project settings
-.spyderproject
-
-# Rope project settings
+# IDE project settings
+.idea
 .ropeproject
+.spyderproject
+*.swp
